--- a/frontend/hackerton2023/src/components/home/home.css
+++ b/frontend/hackerton2023/src/components/home/home.css
@@ -1,13 +1,92 @@
 .container {
-  max-width: 960px;
+  display: grid;
+  grid-template-columns: 1fr 1.618fr;
+  width: 100%;
+  height: 100vh;
   margin: 0 auto;
-  padding: 0 20px;
+}
+
+.header {
+  grid-column: 1;
+  display: grid;
+  grid-template-rows: 1.5fr 1.618fr;
+
+}
+
+.sub-header {
+  grid-row: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sub-header h1{
+
+}
+
+.write-button {
+  grid-row: 2;
+  text-Decoration: none;
+  background-color: #fff;
+  border: 2px solid #000;
+  width: 40%;
+  color: #000;
+  font-size: 1rem;
+  padding: 1rem 2rem;
+  margin: 1rem;
+  cursor: pointer;
+  text-align: center;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.write-button:hover {
+  background-color: #000;
+  color: #fff;
+}
+.body {
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: 1fr 0.2fr 1fr 0.2fr;
 }
 
 .product-list {
+  grid-column: 1;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  word-wrap: break-word;
+  word-break: break-all;
+
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  max-height: 100vh;
+  max-width: 100%;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.product-list::-webkit-scrollbar {
+  display: none;
+}
+
+.product-list2 {
+  grid-column: 3;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  word-wrap: break-word;
+  word-break: break-all;
+
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  max-height: 100vh;
+  max-width: 100%;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.product-list2::-webkit-scrollbar {
+  display: none;
 }
 
 .product-card {
@@ -45,20 +124,4 @@
   font-weight: bold;
   color: #333333;
   transition: color 0.2s ease-in-out;
-}
-
-.button {
-  display: inline-block;
-  padding: 10px 20px;
-  font-size: 1rem;
-  font-weight: bold;
-  text-align: center;
-  color: #ffffff;
-  background-color: #007bff;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.button:hover {
-  background-color: #0069d9;
 }
