--- a/frontend/hackerton2023/src/components/write/write.css
+++ b/frontend/hackerton2023/src/components/write/write.css
@@ -1,55 +1,54 @@
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  }
-  
-  .form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 80%;
-    max-width: 600px;
-    padding: 2rem;
-    background-color: #fff;
-    border-radius: 0.5rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
-  }
-  
-  label {
-    font-size: 1.2rem;
-    font-weight: 500;
-  }
-  
-  input,
-  textarea {
-    padding: 0.5rem;
-    border: none;
-    border-radius: 0.25rem;
-    box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.2);
-    font-size: 1.2rem;
-    font-family: inherit;
-  }
-  
-  input[type="file"] {
-    margin-bottom: 1rem;
-  }
-  
-  .button {
-    align-self: flex-end;
-    background-color: #2980b9;
-    color: #fff;
-    font-size: 1.2rem;
-    font-weight: 500;
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 0.25rem;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-  }
-  
-  .button:hover {
-    background-color: #2c3e50;
-  }
-  
+.write-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 80%;
+  max-width: 600px;
+  padding: 2rem;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+}
+
+label {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+input,
+textarea {
+  padding: 0.5rem;
+  border: none;
+  border-radius: 0.25rem;
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.2);
+  font-size: 1.2rem;
+  font-family: inherit;
+}
+
+input[type="file"] {
+  margin-bottom: 1rem;
+}
+
+.button {
+  align-self: flex-end;
+  background-color: #2980b9;
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.button:hover {
+  background-color: #2c3e50;
+}
