--- a/frontend/hackerton2023/src/components/detail/detail.css
+++ b/frontend/hackerton2023/src/components/detail/detail.css
@@ -1,40 +1,53 @@
 .product-detail-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-  }
-  
-  .product-image {
-    width: 300px;
-    height: 300px;
-    object-fit: contain;
-    margin-bottom: 20px;
-  }
-  
-  .product-title {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-  
-  .product-description {
-    font-size: 18px;
-    margin-bottom: 20px;
-  }
-  
-  .like-button {
-    background-color: #0077c2;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-  }
-  
-  .like-button:hover {
-    background-color: #0062a5;
-  }
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: 1fr 3.22fr 1fr;
+  margin-top: 30px;
+}
+.middle-container {
+  grid-column: 2;
+}
+.description {
+  display: grid;
+  justify-items: center;
+  text-align: center;
+}
+.product-image {
+  object-fit: contain;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+
+.product-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.product-description {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.like-button {
+  background-color: #fff;
+  border: 2px solid #000;
+  color: #000;
+  font-size: 1rem;
+  padding: 1rem 2rem;
+  margin: 1rem;
+  cursor: pointer;
+  text-align: center;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.like-button:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: row-reverse;
+}
