--- a/frontend/hackerton2023/src/components/write/write.css
+++ b/frontend/hackerton2023/src/components/write/write.css
@@ -37,18 +37,18 @@ input[type="file"] {
 }
 
 .button {
-  align-self: flex-end;
-  background-color: #2980b9;
-  color: #fff;
-  font-size: 1.2rem;
-  font-weight: 500;
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 0.25rem;
+  background-color: #fff;
+  border: 2px solid #000;
+  color: #000;
+  font-size: 1rem;
+  padding: 1rem 2rem;
+  margin: 1rem;
   cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
+  text-align: center;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .button:hover {
-  background-color: #2c3e50;
+  background-color: #000;
+  color: #fff;
 }
