--- a/frontend/hackerton2023/src/components/home/home.css
+++ b/frontend/hackerton2023/src/components/home/home.css
@@ -108,8 +108,8 @@
 }
 
 .product-card__image {
-  width: 100%;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
   border-radius: 5px;
 }
