--- a/frontend/hackerton2023/src/components/detail/detail.css
+++ b/frontend/hackerton2023/src/components/detail/detail.css
@@ -51,3 +51,29 @@
   display: flex;
   flex-direction: row-reverse;
 }
+
+.product-progress {
+  width: 100%;
+  height: 4px;
+  background-color: #ddd;
+  margin-top: 16px;
+}
+
+.product-progress-bar {
+  height: 100%;
+  background-color: #000;
+}
+
+.progress-bar-container {
+  width: 100%;
+  height: 12px;
+  background-color: #f2f2f2;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.progress-bar {
+  height: 100%;
+  background-color: #000;
+  transition: width 0.3s ease-in-out;
+}
