--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -42,11 +42,12 @@
 .body {
   grid-column: 2;
   display: grid;
-  grid-template-columns: 1fr 0.2fr 1fr 0.2fr;
+  grid-template-columns: 0.1fr 1fr 0.02fr 1fr 0.1fr;
+  justify-items: center;
 }
 
 .product-list {
-  grid-column: 1;
+  grid-column: 2;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -57,7 +58,7 @@
   overflow-y: scroll;
   scroll-behavior: smooth;
   max-height: 100vh;
-  max-width: 100%;
+  max-width: 220px;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
@@ -66,7 +67,7 @@
 }
 
 .product-list2 {
-  grid-column: 3;
+  grid-column: 4;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -77,7 +78,7 @@
   overflow-y: scroll;
   scroll-behavior: smooth;
   max-height: 100vh;
-  max-width: 100%;
+  max-width: 220px;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
