--- a/frontend/src/components/auth/login.css
+++ b/frontend/src/components/auth/login.css
@@ -73,4 +73,9 @@
     background-color: #000;
     color: #fff;
   }
+
+  .oauth-button:disabled {
+    background-color: #000;
+    color: #fff;
+  }
   
