--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -107,7 +107,7 @@
 .product-card__image {
   width: 150px;
   height: 150px;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 5px;
 }
 
