--- a/frontend/src/components/home/home.css
+++ b/frontend/src/components/home/home.css
@@ -51,7 +51,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
+  align-content: flex-start;
 
   word-wrap: break-word;
   word-break: break-all;
@@ -72,6 +72,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-content: flex-start;
 
   word-wrap: break-word;
   word-break: break-all;
